[gd_scene load_steps=16 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://art/knife.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=6]
action = "ui_accept"

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="DynamicFont" id=8]
size = 28
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=12]
size = 20
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 482.0
margin_bottom = 717.0
color = Color( 0.423529, 0.0156863, 0.243137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -173.5
margin_top = 20.0
margin_right = 173.5
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "Th Creepy
Jump!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.9927
margin_top = -48.933
margin_right = 100.007
margin_bottom = -13.933
custom_fonts/font = SubResource( 2 )
text = "High Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.993
margin_top = -109.933
margin_right = 125.007
margin_bottom = -67.933
custom_fonts/font = SubResource( 3 )
text = "Your Score: 0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -475.0
margin_right = -3.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.4927
margin_top = 51.067
margin_right = 62.5073
margin_bottom = 115.067
custom_fonts/font = SubResource( 5 )
shortcut = SubResource( 7 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]

[node name="Timer2" type="Timer" parent="."]

[node name="Knife" type="Sprite" parent="."]
visible = false
position = Vector2( 407.912, 95.2056 )
scale = Vector2( 0.0234392, 0.0391086 )
texture = ExtResource( 3 )

[node name="KnifeLabel" type="Label" parent="."]
visible = false
margin_left = 408.0
margin_top = 77.0
margin_right = 477.0
margin_bottom = 112.0
custom_fonts/font = SubResource( 8 )
text = "Ã—0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishMessage" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.61
margin_top = -240.0
margin_right = 142.39
margin_bottom = -105.0
custom_fonts/font = SubResource( 9 )
text = "Congratulation!
You've Finished
The Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionButton" type="Button" parent="."]
margin_left = 102.499
margin_top = 498.93
margin_right = 381.499
margin_bottom = 562.93
custom_fonts/font = SubResource( 10 )
text = "Instruction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionPanel" type="Panel" parent="."]
visible = false
margin_right = 479.0
margin_bottom = 723.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel" type="Label" parent="InstructionPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -250.5
margin_right = 239.0
margin_bottom = 250.5
custom_fonts/font = SubResource( 11 )
text = "Welcome!
In this game you've to save some girls in
every level. To save girls you need knife.
So, you've to collect knife as much as
possible. If required knife not available
to you then you can't save the girls.
You see some coin to collect. 
You'll get 2000 point frome every
save and every coin gives you 1 point.
You will see some bombs or obstacle.
You have to overcome obstacles, if any 
touch your body then you'll die 
and also If you fall down, you'll die.

Controls:
Jump - Up Arrow
Double Jump - 2 times Up Arrow
Left - Left Arrow
Right - Right Arrow"
align = 1

[node name="Button" type="Button" parent="InstructionPanel"]
margin_left = 18.0
margin_top = 20.0
margin_right = 106.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 12 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="InstructionButton" to="." method="_on_InstructionButton_pressed"]
[connection signal="pressed" from="InstructionPanel/Button" to="." method="_on_Button_pressed"]
